GAP-36 position download accession fixed

--- a/src/src/components/map/Map.css
+++ b/src/src/components/map/Map.css
@@ -1,92 +1,97 @@
 .mapDiv {
-    /* height: 93vh; */
-    width: 100%;
+  /* height: 93vh; */
+  width: 100%;
 }
 
-
-
 .filter-map {
-    background-color: white;
+  background-color: white;
 }
 
 .filter-map:hover {
-    background-color: rgb(197, 197, 197);
+  background-color: rgb(197, 197, 197);
 }
-.boto{
-    width: 300px;
-    height: 300px;
-    position: 'absolute';
-    top: '10px';
-    right: '10px';
-    z-index: 1111111;
-    background-color: aqua;
-    
+.boto {
+  width: 300px;
+  height: 300px;
+  position: "absolute";
+  top: "10px";
+  right: "10px";
+  z-index: 1111111;
+  background-color: aqua;
 }
-.div-inferior-derecha{
-    position: absolute;
-    bottom: 35px;
+.div-inferior-derecha {
+  position: absolute;
+  bottom: 35px;
   right: 50px;
+  transition: 0.3s ease-in-out;
 }
-.leaflet-left{
- margin-top: 220px;
- margin-left: 11px;
+
+.div-inferior-derecha-showRoad{
+  position: absolute;
+  bottom: 35px;
+  right: 50px;
+  transition: 0.3s ease-in-out;
+  transform: translateX(-300px);
 }
-.leaflet-rifht{
-    margin-right: 1000px;
-   }
-   
-   .image-container {
-    position: relative;
-    display: inline-block;
-    margin-left: 30px;
-    background-color: aliceblue;
-    width: 38px;
-    height: 38px;
-   border-radius: 5px;
-    border: 1px solid black;
-    display: grid;
-    place-content: center;
-  }
-  
-  .options {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-    background-color: white;
-    padding: 10px;
-   border-radius: 4px;
-   border: 1px solid black;
-  }
-  
-  .image-container:hover .options {
-    display: block;
-    
-  }
-  .leaflet-bottom:hover .options{
-    display: block;
-  }
-  .leaflet-left:hover .options{
-    display: block;
-  }
-  .options label {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  .options input[type="checkbox"] {
-    margin-right: 10px; /* para dejar un espacio entre el checkbox y el texto */
-  }
-.divisito{
+
+.leaflet-left {
+  margin-top: 220px;
+  margin-left: 11px;
+}
+.leaflet-rifht {
+  margin-right: 1000px;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+  margin-left: 30px;
+  background-color: aliceblue;
+  width: 38px;
+  height: 38px;
+  border-radius: 5px;
+  border: 1px solid black;
+  display: grid;
+  place-content: center;
+}
+
+.options {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  background-color: white;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.image-container:hover .options {
+  display: block;
+}
+.leaflet-bottom:hover .options {
+  display: block;
+}
+.leaflet-left:hover .options {
+  display: block;
+}
+.options label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.options input[type="checkbox"] {
+  margin-right: 10px; /* para dejar un espacio entre el checkbox y el texto */
+}
+.divisito {
   margin-top: 520px;
   top: inherit;
-    position: absolute;
-   
+  position: absolute;
 }
-.layers-container{
+.layers-container {
   opacity: 0.8;
-  background-color:rgb(235, 238, 245);
+  background-color: rgb(235, 238, 245);
   width: 120px;
   height: 130px;
   border-radius: 5px;
@@ -101,6 +106,6 @@
   height: 44px;
 }
 
-.leaflet-bottom{
+.leaflet-bottom {
   bottom: -40%;
 }
